@@ -1,99 +1,149 @@
 # Deploying the Web Application
 
-## Set Environment Variables
+## Prepare the global configuration file
 
-The following environment variable is referenced in this document and is required for successful portal setup:
+The portal is configured using a global configuration file, `portal.properties`.
+An example file is available in the `src/main/resources` folder.
+Use it as a template to create your own:
 
-* `CATALINA_HOME`: points to the home directory of your Apache Tomcat installation.
+    cd src/main/resources
+    cp portal.properties.EXAMPLE $HOME/cbioportal/portal.properties
 
-To make it available to your bash shell, add the following to your `.bash_profile`:
+For more information about the `portal.properties` file, see the
+[reference](portal.properties-Reference.md) page.
 
-    export CATALINA_HOME=/path/to/tomcat
+Several scripts of cBioPortal use this `portal.properties` file to get info
+like db connection parameters. You can indicate the folder where this file is
+with an environment variable:
 
-Note:  If you are following the [recommended Ubuntu instructions](https://www.digitalocean.com/community/tutorials/how-to-install-apache-tomcat-8-on-ubuntu-14-04):  you should set ```export CATALINA_HOME=/opt/tomcat```
+```
+export PORTAL_HOME=$HOME/cbioportal
+```
 
-## Add PORTAL_HOME to Tomcat
+if your properties file is at `PORTAL_HOME/portal.properties`
 
-The `PORTAL_HOME` environment variable needs to be available to the `cbioportal.war` file which runs within the Tomcat server. To make it available to Tomcat, edit your Tomcat startup file (typically `$CATALINA_HOME/bin/catalina.sh`) and add the following line anywhere within this file (we typically add it near the `JAVA_OPTS` statements):
+## Run cBioPortal Session Service
+The cBioPortal app requires [session service](Architecture-Overview.md). For
+instructions on how to run this without Docker see
+https://github.com/cBioPortal/session-service#run-without-docker. Once this is
+working, update the properties file:
 
-    export PORTAL_HOME= $CATALINA_HOME + "/webapps/cbioportal/WEB-INF/classes/"
+```bash
+# session-service url: http://[host]:[port]/[session_service_app]/api/sessions/[portal_instance]/
+# example session-service url: http://localhost:8080/session_service/api/sessions/public_portal/
+# see: https://github.com/cBioPortal/session-service
+session.service.url=
+```
 
-## Add the MySQL JDBC Driver to Apache Tomcat
+## Run the cbioportal backend
+To run the app we use `webapp-runner`. It's a command line version of Tomcat
+provided by [Heroku](https://github.com/jsimone/webapp-runner). All parameters
+can be seen with:
 
-A proper JDBC driver will also need to be accessible by Apache Tomcat.  If using MySQL, the [Connector/J](http://dev.mysql.com/downloads/connector/j/) driver jar file should be placed in `$CATALINA_HOME/lib`.
+```
+java -jar portal/target/dependency/webapp-runner.jar --help
+```
 
-More information on configuring Apache Tomcat connection pooling can be found [here](http://tomcat.apache.org/tomcat-7.0-doc/jndi-datasource-examples-howto.html).
+This runs the app in the foreground. If a port is already in use it will raise
+an error mentioning that. To change the port use the `--port` flag.
 
-***We have reports that the Tomcat package that comes with (at least) Ubuntu 14.04 cannot handle the connection pool from resources.  If you are encountering this is, we suggest you [download the Tomcat archive from Apache and install from there](https://www.digitalocean.com/community/tutorials/how-to-install-apache-tomcat-8-on-ubuntu-14-04).***
+There are three main ways to run the portal: without authentication, with
+optional login and with required login. All of them require the cBioPortal
+session service to be running.
 
-## Set up the Database Connection Pool
+### Without authentication
+In this mode users are able to use the portal, but they won't be able to save
+their own virtual studies and groups. See the [optional login
+section](#optional-login) to enable this.
+ 
+```bash
+java \
+    -jar \
+    -Dauthenticate=noauthsessionservice \
+    portal/target/dependency/webapp-runner.jar \
+    portal/target/cbioportal.war
+```
 
-Apache Tomcat provides the database database connection pool to the cBioPortal.  To setup a database connection pool managed by Tomcat, add the following line to `$CATALINA_HOME/conf/context.xml`, making sure that the properties match your system:
+### Optional login
 
-     <Context>
-         ...
-         <Resource name="jdbc/cbioportal" auth="Container" type="javax.sql.DataSource"
-            maxActive="100" maxIdle="30" maxWait="10000"
-            username="cbio_user" password="somepassword" driverClassName="com.mysql.jdbc.Driver"
-            connectionProperties="zeroDateTimeBehavior=convertToNull;"
-            testOnBorrow="true"
-            validationQuery="SELECT 1"
-            url="jdbc:mysql://localhost:3306/cbioportal"/>
-    ...
-    </Context>
+In this mode users can see all the data in the portal, but to save their own
+groups and virtual studies they are required to log in. This will allow them to
+store user data in the session service. See the
+[tutorials](https://www.cbioportal.org/tutorials) section to read more about
+these features.
 
-## Deploy the cBioPortal WAR
+```bash
+java \
+    -jar \
+    -Dauthenticate=social_auth
+    portal/target/dependency/webapp-runner.jar \
+    portal/target/cbioportal.war
+```
 
-A tomcat server is usually started by running the following command:
+Only google is supported as optional login currently. One needs to set the
+Google related configuration in the `portal.properties` file:
 
-	$CATALINA_HOME/bin/catalina.sh start
+```
+googleplus.consumer.key=
+googleplus.consumer.secret=
+```
 
-or, if you are following the [recommended Ubuntu instructions](https://www.digitalocean.com/community/tutorials/how-to-install-apache-tomcat-8-on-ubuntu-14-04)
+See [Google's Sign in
+Documentation](https://developers.google.com/identity/sign-in/web/sign-in#before_you_begin)
+to obtain these values.
 
-	sudo initctl restart tomcat
+### Required login
 
-After the tomcat server has been started, to deploy the WAR file, run the following command:
+```bash
+java \
+    -Dauthenticate=CHOOSE_DESIRED_AUTHENTICATION_METHOD \
+    -jar \
+    portal/target/dependency/webapp-runner.jar \
+    portal/target/cbioportal.war
+```
 
-    sudo cp portal/target/cbioportal-*-SNAPSHOT.war $CATALINA_HOME/webapps/cbioportal.war
-    
+Change `CHOOSE_DESIRED_AUTHENTICATION_METHOD` to one of `googleplus`,
+`social_auth`, `saml`, `openid`, `ad`, `ldap`. The various methods of
+authentication are described in the [Authorization and
+Authentication](https://docs.cbioportal.org/#2-2-authorization-and-authentication)
+section.
 
-After doing this, you can look in the tomcat log file (`$CATALINA_HOME/logs/catalina.out`) to see if the portal has been proper deployed.  You should see something like:
+### Property configuration
+The configuration defined in `portal.properties` can also be
+passed as command line arguments. The priority of property loading is as
+follows:
 
-    INFO: Deployment of web application archive /Users/ecerami/libraries/apache-tomcat-7.0.59/webapps/cbioportal.war has finished in 13,009 ms
+1. `-D` command line parameters overrides all
+2. `${PORTAL_HOME}/portal.properties`
+3. `portal.properties` supplied at compile time
+4. Defaults defined in code
+
+Note that the `authenticate` property is currently required to be set as a
+command line argument, it won't work when set in `portal.properties` (See issue
+[#6109](https://github.com/cBioPortal/cbioportal/issues/6109)).
+
+Some scripts require a `${PORTAL_HOME}/portal.properties` file, so it is best
+to define the properties there.
+
+### Note for Tomcat Deployers
+Before we were using `webapp-runner`, our documentation recommended a system
+level installed Tomcat. In this case people might have been using
+`dbconnector=jndi` instead of the new default `dbconnector=dbcp`. There is a
+known issue where setting dbconnector in the properties file does not work
+([#6148](https://github.com/cBioPortal/cbioportal/issues/6148)). It needs to be
+set as a command line argument. For Tomcat this means
+`CATALINA_OPT="-Ddbconnector=jndi"`.
 
 ## Verify the Web Application
 
 Lastly, open a browser and go to:  
-
-[http://localhost:8080/cbioportal/](http://localhost:8080/cbioportal/)
+<http://localhost:8080>
 
 ## Important
 
-- Each time you modify any java code, you must recompile and redeploy the WAR file.
-- Each time you modify any properties (see customization options), you must recompile and redeploy the WAR file.
-- Each time you add new data, you must restart tomcat.
+- Each time you modify any java code, you must recompile and redeploy the app.
+- Each time you modify any properties (see customization options), you must restart the app
+- Each time you add new data, you must restart the app
 
-## Developer Tip
 
-If you are actively developing for cBioPortal, you may notice OutOfMemory issues after you re-deploy your WAR file a few times.  Best option for dealing with this is increase your PermGen space settings.
-
-To do so, create a file:  `$CATALINA_HOME/setenv.sh`, and add the following line:
-
-    export CATALINA_OPTS="$CATALINA_OPTS -XX:MaxPermSize=256m"
-
-## Gotcha:  Broken MySQL Pipe after long periods of inactivity
-
-By default, MySQL will automatically close database connections after 8 hours of inactivity.  If no one accesses your instance of cBioPortal for 8 hours, users may be unable to access your data, and your log files may show "Broken Pipe" errors.  As described [here](http://juststuffreally.blogspot.com/2007/10/broken-pipes-with-tomcat-and-dbcp.html), and [here](http://stackoverflow.com/questions/20848219/tomcat-mysql-java-servlet-application-getting-500-error-after-some-hours-of-inac), the recommended solution is to add:
-
-    testOnBorrow="true"
-    validationQuery="SELECT 1"
-
-to the JNDI configuration.
-
-According to the stack overflow answer:
-
-> The first, `testOnBorrow` tells the datasource to validate the connection before handing it back to the application. The second, `validationQuery` is the SQL which is used to validate the connection. Note the SQL of SELECT 1 is a valid value for MySQL databases.
-
-The default JNDI settings above therefore include `testOnBorrow` and `validationQuery`, and you should therefore not see any broken pipe errors.  Should you see these errors, despite the settings, best to consult [here](http://juststuffreally.blogspot.com/2007/10/broken-pipes-with-tomcat-and-dbcp.html), and [here](http://stackoverflow.com/questions/20848219/tomcat-mysql-java-servlet-application-getting-500-error-after-some-hours-of-inac).
-
-[Steps Complete: Return Home](README.md)
+[Next Step: Loading a Sample Study](Load-Sample-Cancer-Study.md)
